<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- delete these lines in your language file __begin -->
	<string name="version">1.0.7</string>
	<!-- delete these lines in your language file __end -->
	<string name="version_string">Version</string>
    <string name="app_name">ViewInPlay</string>
    <string name="action_settings">Settings</string>
    <string name="xposed_description">View the page of App in the Play Store easily</string>

    <string name="recents_remove_from_list">Remove from list</string>
    <string name="recents_app_info">@string/notif_app_info</string>
    <string name="recents_open_halo">Open in halo</string>
    <string name="recents_launch_floating">Floating mode</string>
    <string name="notif_app_info">App info</string>
    <string name="view_in_play">View in Play</string>

    <!-- delete these lines in your language file __begin -->
    <string name="key_show_in_recent_panel">show_in_recent_panel</string>
    <string name="key_show_in_app_info">show_in_app_info</string>
    <string name="key_two_finger_in_recent_panel">double_in_recent_panel</string>
    <string name="key_show_in_notification">show_in_notification</string>
    <string name="key_directly_show_in_play">directly_show_in_play</string>
    <string name="key_use_browser">use_browser</string>
    <string name="key_compat_xhalo">compat_xhalo</string>
    <string name="key_compat_floating">compat_floating</string>
    <string name="key_pref_layout">key_pref_layout</string>
    <string name="key_hide_icon">hide_icon</string> 
    <string name="key_debug_logs">debug_logs</string> 
    <!-- delete these lines in your language file __end -->

    <string name="pref_title_show_in_recent_panel">Show in recent panel</string>
    <string name="pref_summary_show_in_recent_panel_on">"the 'view in play' menu will show in the long press popup menu in the recent task panel"</string>
    <string name="pref_summary_show_in_recent_panel_off">"enable this option will add a 'view in play' menu in the recent task long press popup menu"</string>
    <string name="pref_title_show_in_app_info">Show in app info screen</string>
    <string name="pref_summary_show_in_app_info_on">"the 'view in play' menu will show in the app info screen"</string>
    <string name="pref_summary_show_in_app_info_off">"enable this option will add a 'view in play' button in the app info screen"</string>
    <string name="pref_title_two_finger_in_recent_panel">Two-Finger go to Store</string>
    <string name="pref_summary_two_finger_in_recent_panel_on">"use two fingers tap the recent task thumbnail in the recent task panel to go to the Play Store"</string>
    <string name="pref_summary_two_finger_in_recent_panel_off">"enable this option will let you use two-finger-tap the recent task thumbnail to go to the Play Store"</string>
    <string name="pref_title_show_in_notification">Show in Notification popup menu</string>
    <string name="pref_summary_show_in_notification_on">"the 'view in play' menu will show in the long press popup menu upon the notification"</string>
    <string name="pref_summary_show_in_notification_off">"enable this option will add a 'view in play' menu in the notification long press popup menu"</string>
    <string name="pref_title_directly_view_in_play">Directly view in the Play Store</string>
    <string name="pref_summary_directly_view_in_play_on">directly view in the Play Store, not show the app chooser screen</string>
    <string name="pref_summary_directly_view_in_play_off">will show the app choose screen, let you to choose which app to handle the action</string>
    <string name="pref_title_use_browser">Show browsers in the app chooser</string>
    <string name="pref_summary_use_browser_on">"all browsers will show in the app chooser, so you can choose browser instead of store app (please make sure 'Directly view in play' not checked, so there will be a app chooser when you click 'view in play' menu)"</string>
    <string name="pref_summary_use_browser_off">just show all the stores in the app chooser, browsers not included</string>
    <string name="pref_title_compatibility">Compatibility</string>
    <string name="pref_title_compat_xhalo">XHaloWindow</string>
    <string name="pref_summary_compat_xhalo">XHaloWindow</string>
    <string name="pref_title_compat_floating">new PA Floating mode</string>
    <string name="pref_summary_compat_floating">Force add floating mode menu, in case for the default implements not working, no need check this in most situation.</string>
    <string name="pref_title_note">Note</string>
    <!-- this may be edited often -->
    <string name="pref_summary_note">After change or upgrade, Please reboot your phone</string>
    <string name="pref_title_xda">XDA thread</string>
    <string name="pref_summary_xda">Click to visit the XDA thread of ViewInPlay module</string>
    <string name="pref_title_about">About</string>
    <string name="pref_title_hide_icon">Hide icon from launcher</string>
    <string name="pref_summary_hide_icon_on">"the app icon from the launcher can not bring back, unless reinstall this app. find me in the Xposed Module list."</string>
    <string name="pref_summary_hide_icon_off">check to hide the icon from the launcher</string>
    <string name="pref_summary_hide_icon_not_from_launcher">only come from your launcher can toggle this checkboxxxxx</string>
    <string name="pref_tilte_debug_logs">Debug logs</string>
    <string name="pref_title_extra">Extra</string>
    
    <string name="no_play_on_the_phone">oh~ no Google Play Store??? if you sure you have it, please contact me :)</string>
    <string name="stock_app">"Sorry~ this is stock app, can't show in the Play Store."</string>
    <string name="notice_hide_icon">"Are you sure? once hide, can't bring it back unless reinstall the app for now"</string>
    <!-- <string name="cant_open_in_xhalo">"Sorry, can't launch it. make sure you have XHaloWindow, and actived it :)"</string> -->
</resources>
