<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="@string/key_pref_layout" >

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="@string/key_show_in_recent_panel"
        android:summaryOff="@string/pref_summary_show_in_recent_panel_off"
        android:summaryOn="@string/pref_summary_show_in_recent_panel_on"
        android:title="@string/pref_title_show_in_recent_panel" />
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="@string/key_show_in_app_info"
        android:summaryOff="@string/pref_summary_show_in_app_info_off"
        android:summaryOn="@string/pref_summary_show_in_app_info_on"
        android:title="@string/pref_title_show_in_app_info" />
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="@string/key_directly_show_in_play"
        android:summaryOff="@string/pref_summary_directly_view_in_play_off"
        android:summaryOn="@string/pref_summary_directly_view_in_play_on"
        android:title="@string/pref_title_directly_view_in_play" />

    <PreferenceCategory android:title="@string/pref_title_extra" >
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/key_hide_icon"
            android:summaryOff="@string/pref_summary_hide_icon_off"
            android:summaryOn="@string/pref_summary_hide_icon_on"
            android:title="@string/pref_title_hide_icon" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_title_note" >
        <Preference
            android:selectable="false"
            android:summary="@string/pref_summary_note" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_title_about" >
        <Preference
            android:selectable="false"
            android:summary="@string/version_string"
            android:title="@string/version" />
        <Preference
            android:icon="@drawable/xda_icon"
            android:summary="@string/pref_summary_xda"
            android:title="@string/pref_title_xda" />
    </PreferenceCategory>

</PreferenceScreen>